Closed Bug 695243 Opened 14 years ago Closed 14 years ago

Bug 692759 broke clang builds

Categories

(Core Graveyard :: Plug-ins, defect)

x86
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla10

People

(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)

References

Details

(Keywords: regression)

Attachments

(1 file)

/Users/ehsanakhgari/moz/tmp/dom/plugins/ipc/PluginInstanceChild.cpp:477:32: error: non-constant-expression cannot be narrowed from type 'uint32_t' (aka 'unsigned int') to 'uint16_t' (aka 'unsigned short') in initializer list NPRect windowRect = {0, 0, mWindow.height, mWindow.width}; ^~~~~~~~~~~~~~ /Users/ehsanakhgari/moz/tmp/dom/plugins/ipc/PluginInstanceChild.cpp:477:32: note: override this message by inserting an explicit cast NPRect windowRect = {0, 0, mWindow.height, mWindow.width}; ^~~~~~~~~~~~~~ static_cast<ui)t16_t>( /Users/ehsanakhgari/moz/tmp/dom/plugins/ipc/PluginInstanceChild.cpp:477:48: error: non-constant-expression cannot be narrowed from type 'uint32_t' (aka 'unsigned int') to 'uint16_t' (aka 'unsigned short') in initializer list NPRect windowRect = {0, 0, mWindow.height, mWindow.width}; ^~~~~~~~~~~~~ /Users/ehsanakhgari/moz/tmp/dom/plugins/ipc/PluginInstanceChild.cpp:477:48: note: override this message by inserting an explicit cast NPRect windowRect = {0, 0, mWindow.height, mWindow.width}; ^~~~~~~~~~~~~ static_cast<u)nt16_t>(
Attached patch Patch (v1)Splinter Review
Assignee: nobody → ehsan
Status: NEW → ASSIGNED
Attachment #567649 - Flags: review?(bgirard)
Attachment #567649 - Flags: review?(bgirard) → review+
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: