Bug 695243 - Cast the 32-bit integers to 16-bit ones explicitly in order to fix clang builds; r=benwa

This is fine since the dimensions of a plugin cannot be more than USHRT_MAX.